[package]
name = "check-markdown-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.18"
clap = "3.0"
url = "2.3.1"
surf = "2.3.0"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
async-std = "1.10.0"
regex = "1.5.4"